[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"

[dependencies]
bitset.path = "./bitset/"
log.workspace = true
shared.path = "shared"
util.path = "./util/"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[workspace]
members = [".", "bitset", "shared", "user/lib", "user/shell", "util"]

[workspace.dependencies]
log = "0.4.28"
paste = "1.0"
