[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"

[dependencies]
bitset.path = "./bitset/"
hex-display.workspace = true
log.workspace = true
shared.path = "shared"
util.path = "./util/"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[workspace]
members = [".", "bitset", "shared", "user/lib", "user/shell", "util"]

[workspace.dependencies]
hex-display = "0.3.0"
log = "0.4.28"
paste = "1.0"
